try fix scrollbars

--- a/desktop/src/pages/LiveView.module.css
+++ b/desktop/src/pages/LiveView.module.css
@@ -2,7 +2,6 @@
   justify-content: space-between;
   gap: 10px;
   max-height: 550px;
-  overflow: hidden;
 }
 
 .contentBox > button:hover {
